# iot-project-tx00ex87-3001-Stargazer

./: .clang-format  .gitignore  .gitmodules  ASSEMBLY.md  BLANK_README.md  LICENSE  Pico-to-ESP-uart-README.md  README.md  UART_COMMS.md  celestial_plotter.py  example-settings.txt  moon_finder.py
3D-models/: 28BYJ-48-bottom-plate.SLDPRT  28BYJ-48-cover.SLDPRT  28BYJ-48-stepper-motor.sldprt  Bottom-bowl.SLDPRT  Connector-arm.SLDPRT  ESP-Holder - BACKUP.SLDPRT  ESP-Holder-Nut-Lock-Design.SLDPRT  ESP-Holder.SLDPRT  Gyro-arm-assembly.SLDASM  Opto-fork-holder.SLDPRT
3D-models/3MF/: 28BYJ-48-cover.3MF  Connector-arm.3MF  ESP-Holder.3MF  Opto-fork-holder.3MF
3D-models/AMF/: 28BYJ-48-cover.AMF  Connector-arm.AMF  ESP-Holder.AMF  Opto-fork-holder.AMF
3D-models/Prusa/: 28BYJ-48-cover_0.4n_0.2mm_ABS_MINIIS_44m.bgcode  Connector-arm_0.4n_0.2mm_ABS_MINIIS_18m.bgcode  ESP-Holder_0.4n_0.2mm_ABS_MINIIS_13m.bgcode
3D-models/STL/: 28BYJ-48-bottom-plate.STL  28BYJ-48-cover.STL  Bottom-bowl.STL  Connector-arm.STL  ESP-Holder-Nut-Lock-Design.STL  ESP-Holder.STL  Opto-fork-holder.STL
common/inc/: convert.hpp  crc.hpp  debug.hpp  message.hpp
common/src/: convert.cpp  crc.cpp  message.cpp
esp32-cam/: CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  messages.txt  sdkconfig
esp32-cam/inc/: TLSWrapper.hpp  TaskPriorities.hpp  camera.hpp  debug-functions.hpp  defines.hpp  diagnosticsPoster.hpp  espPicoCommHandler.hpp  espPicoUartCommHandler.hpp  jsonParser.hpp  requestHandler.hpp  requestHandler.tpp  scopedBuffer.hpp  scopedMutex.hpp  sd-card.hpp  tasks.hpp  testMacros.hpp  timesync-lib.hpp  wireless.hpp
esp32-cam/inc/components/: camera.hpp
esp32-cam/inc/test-cases/: test_jsonParser.hpp  test_requestHandler.hpp  test_sd-card.hpp
esp32-cam/main/: CMakeLists.txt  main.c  main.cpp
esp32-cam/src/: TLSWrapper.cpp  camera.cpp  debug-functions.cpp  diagnosticsPoster.cpp  espPicoCommHandler.cpp  espPicoUartCommHandler.cpp  jsonParser.cpp  requestHandler.cpp  sd-card.cpp  tasks.cpp  timesync-lib.cpp  wireless.cpp
esp32-cam/src/components/: camera.cpp  sd-card.cpp
esp32-cam/src/test-cases/: test_jsonParser.cpp  test_requestHandler.cpp  test_sd-card.cpp
esp32-cam/test/: CMakeLists.txt  manual_tests.cpp  sdkconfig
esp32-cam/test/main/: CMakeLists.txt  unity_tests.cpp
pico/: CMakeLists.txt  Dockerfile  GPIO.md  README.md  docker-compose.yml
pico/inc/: PicoUart.hpp  RingBuffer.hpp  commbridge.hpp  controller.hpp  convert.hpp  message.hpp  structs.hpp
pico/inc/devices/: compass.hpp  gps.hpp  motor-control.hpp  stepper-motor.hpp
pico/inc/devices/eeprom/: eeprom.h  logger.hpp  storage.hpp
pico/inc/hardware/: clock.hpp  sleep_functions.hpp
pico/inc/hardware/uart/: PicoUart.hpp  RingBuffer.hpp
pico/inc/planet_finder/: date_utils.hpp  planet_finder.hpp
pico/src/: commbridge.cpp  controller.cpp  convert.cpp  main.cpp  message.cpp  test_main.cpp
pico/src/devices/: compass.cpp  gps.cpp  motor-control.cpp  stepper-motor.cpp
pico/src/devices/eeprom/: eeprom.c  logger.cpp  storage.cpp
pico/src/hardware/: clock.cpp  sleep_functions.cpp
pico/src/hardware/uart/: PicoUart.cpp  RingBuffer.cpp
pico/src/planet_finder/: date_utils.cpp  planet_finder.cpp
pico/src/uart/: PicoUart.cpp  RingBuffer.cpp
pico/tests/planet_finder/: printer.cpp  test_planet_finder.cpp  unity_config.h
pico/tests/unity/: unity_config.h
webserver/: 404.html  API.md  Cargo.toml  README.md  config.toml  example-config.toml  images.html  index.html  login.html
webserver/assets/: commands.js  display-user.js  gallery.css  home-temp.css  images.js  main.css  main.js  user.js  users.js
webserver/assets/js/: commands.js  diagnostics.js  images.js  sitewide.js  users.js
webserver/certs/: root-ca.crt  root-ca.key  root-ca.srl  server.crt  server.csr  server.key
webserver/css/: main.css
webserver/html/: 403.html  404.html  control.html  diagnostics.html  home.html  images.html  index.html  keys.html  login.html  user.html  user_management.html  user_management_403.html
webserver/js/: commands.js  diagnostics.js  keys.js  users.js
webserver/src/: api.rs  app.rs  auth.rs  err.rs  images.rs  keys.rs  lib.rs  main.rs  routes.rs  settings.rs  setup.rs  sg.rs  sg_api.rs  sg_auth.rs  web.rs
webserver/src/api/: commands.rs  diagnostics.rs  keys.rs  setup.rs  time_srv.rs  upload.rs
webserver/src/auth/: backend.rs  login.rs  password.rs  setup.rs  user.rs
webserver/src/init/: settings.rs  setup.rs
webserver/src/sg/: api.rs  auth.rs  images.rs
webserver/src/web/: commands.rs  diagnostics.rs  images.rs  routes.rs
