[package]
name = "webserver"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
axum-login = "0.16.0"
base64 = "0.22.1"
chrono = "0.4.38"
password-auth = "1.0.0"
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "time"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.11.0", features = ["v4"] }
