[package]
name = "webserver"
version = "0.4.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
axum-login = "0.16.0"
axum-messages = "0.7.0"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive"] }
config = { version = "0.14.1", default-features = false, features = ["async", "async-trait", "convert-case", "convert_case", "toml"] }
infer = "0.16.0"
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "time"] }
thiserror = "2.0.3"
time = "0.3.37"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-sessions = { version = "0.13.0", features = ["signed"] }
uuid = { version = "1.11.0", features = ["v4"] }
